--- a/src/Main.css
+++ b/src/Main.css
@@ -42,31 +42,14 @@
     margin-right: 15px;
     font-size: 20px;
 }
+.title{
+    font-size: 24px;
+    margin-top: 15px;
+    margin-bottom: -10px;
+}
 /* Register.js section */
-  .reg-background{
-      margin: 0 auto;
-      width: 30%;
-      height: 70%;
-      padding: 50px;
-  }
-  .reg-inner{
-    margin: 0 auto;
-    width: 80%;
-    height: 80%;
-    text-align: center;
-  }
-  .input-value{
-      border: none;
-    border-bottom: 3px solid rgb(158, 223, 158);
-    border-radius: 2px;
-    width: 400px;
-    height: 25px;
-  }
-  .input-div{
-      text-align: center;
-      width: 100%;
-      height: 80px;
-  }
+  
+  
   label p {
       text-align: left;
       margin-left: 10%;
